feat: :construction: Inicio maquetado y estilizado seccion 1
primera parte de la web

--- a/index.html
+++ b/index.html
@@ -6,9 +6,41 @@
     <title>Food Lover</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="storage/img/logo.png" type="image/x-icon">
-    <!-- <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap">
 </head>
 <body>
-    
+    <div class="allpage">
+        <header>
+            <img src="storage/img/logo.png" alt="borderLogo">
+            <nav class="menu">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">MENUS</a></li>
+                    <li><a href="#">OFFERS</a></li>
+                    <li><a href="#">GALLERY</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="#">BLOG</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="section1">
+            <div class="fondo1"></div>
+            <div class="article">
+                <div class="img1">
+                    <img src="storage/img/placeYourImageHere1.png" alt="platillo1">
+                </div>
+                <div class="info">
+                    <h1>Contact Us For Best Breakfast</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae quibusdam temporibus odio sequi sed in deserunt quis, id vero officia assumenda voluptatem ipsum! Culpa laboriosam repellendus error voluptatibus optio quidem?</p>
+                    <button class="contact">Contact Us</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
