feat: :sparkles: finalizacion seccion 2 y 3

--- a/index.html
+++ b/index.html
@@ -11,43 +11,65 @@
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap"> -->
 </head>
 <body>
-    <div class="allpage">
-        <header>
-            <nav class="menu">
-                <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">MENUS</a></li>
-                    <li><a href="#">OFFERS</a></li>
-                </ul>
-            </nav>
-            <img src="storage/img/logo.png" alt="borderLogo">
-            <nav class="menu">
-                <ul>
-                    <li><a href="#">GALLERY</a></li>
-                    <li><a href="#">CONTACT</a></li>
-                    <li><a href="#">BLOG</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <div class="section1">
-                <div class="fondo1"></div>
-                <div class="article">
-                    <div class="img1">
-                        <img src="storage/img/placeYourImageHere1.png" alt="platillo1">
-                    </div>
-                    <div class="info">
-                        <h1 class="orange">Contact Us For Best Breakfast</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae quibusdam temporibus odio sequi sed in deserunt quis, id vero officia assumenda voluptatem ipsum! Culpa laboriosam repellendus error voluptatibus optio quidem?</p>
-                        <button class="contact">Contact Us</button>
-                    </div>
+    <header>
+        <nav class="menu">
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">MENUS</a></li>
+                <li><a href="#">OFFERS</a></li>
+            </ul>
+            <div class="logomenu">
+                <img src="storage/img/logo.png" alt="borderLogo">
+            </div>
+            <ul>
+                <li><a href="#">GALLERY</a></li>
+                <li><a href="#">CONTACT</a></li>
+                <li><a href="#">BLOG</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="section1">
+            <div class="fondo1"></div>
+            <div class="article">
+                <div class="img1">
+                    <img src="storage/img/placeYourImageHere1.png" alt="platillo1">
+                </div>
+                <div class="info">
+                    <h1 class="orange">Contact Us For Best Breakfast</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae quibusdam temporibus odio sequi sed in deserunt quis, id vero officia assumenda voluptatem ipsum! Culpa laboriosam repellendus error voluptatibus optio quidem?</p>
+                    <button class="contact">Contact Us</button>
                 </div>
             </div>
-            <div class="section2">
-                
+        </div>
+        <div class="section2">
+            <div class="article">
+                <div class="img1">
+                    <img src="storage/img/placeYourImageHereGaleria0.png" alt="platillo2">
+                </div>
+                <div class="info">
+                    <h2>About Us</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla nostrum repudiandae voluptas inventore velit distinctio vitae atque temporibus? Assumenda suscipit aperiam animi error quidem totam eaque vero! Magni, corrupti voluptatum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, iure? Nulla id modi ad ratione in odit eum laborum? Aliquid possimus culpa vero reiciendis temporibus ex quisquam expedita, beatae quae?</p>
+                </div>
             </div>
-        </main>
-    </div>
+        </div>
+        <div class="section3">
+            <div class="franja"></div>
+            <div class="info3">
+                <h3><strong>Our Food Quality</strong></h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, nemo. Sapiente, labore cum exercitationem tenetur ab doloremque officiis itaque excepturi nisi beatae perferendis cumque obcaecati quisquam id hic sunt maxime.</p>
+            </div>
+            <div class="plato1">
+                <img src="storage/img/placeYourImageHere5.png" alt="platillo3">
+            </div>
+            <div class="plato2">
+                <img src="storage/img/placeYourImageHereFood0.png" alt="platillo4">
+            </div>
+            <div class="plato3">
+                <img src="storage/img/placeYourImageHereFood1.png" alt="platillo5">
+            </div>
+        </div>
+    </main>
 </body>
 </html>
