feat: :sparkles: Se finaliza codigo HTML

--- a/index.html
+++ b/index.html
@@ -69,7 +69,83 @@
             <div class="plato3">
                 <img src="storage/img/placeYourImageHereFood1.png" alt="platillo5">
             </div>
-        </div>
+        </div><section class="gallery" id="gal">
+            <h1>Our Food gallery</h1>
+            <section class="images">
+                <img src="storage/img/placeYourImageHereGaleria0.png">
+                <img src="storage/img/placeYourImageHereGaleria1.png">
+                <img src="storage/img/placeYourImageHereGaleria2.png">
+                <img src="storage/img/placeYourImageHereGaleria3.png">
+                <img src="storage/img/placeYourImageHereGaleria4.png">
+                <img src="storage/img/placeYourImageHereGaleria5.png">
+            </section>
+       </section>
+       <section class="enjoy">
+            <div class="fondo-enj">
+                <img src="storage/img/placeYourImageHereOur0.png">
+            </div>
+            <article class="enj-txt">
+                <h1>Enjoy Our Food</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua.
+                    Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis
+                </p>
+            </article>
+       </section>
+       <section class="menu" id="men">
+            <h1>Our Menu</h1>
+            <div class="cont-men">
+                <div class="img-men-1">
+                    <img src="storage/img/placeYourImageHereMenu0.png">
+                    <h3>ITALIAN SOURCE MUSHROOM</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua.
+                        Quis ipsum suspendisse
+                    </p>
+                    <h4>Price: $12.00</h4>
+                </div>
+                <div class="img-men-2">
+                    <img src="storage/img/placeYourImageHereMenu1.png">
+                    <h3>ITALIAN SOURCE MUSHROOM</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua.
+                        Quis ipsum suspendisse
+                    </p>
+                    <h4>Price: $12.00</h4>
+                </div>
+                <div class="img-men-3">
+                    <img src="storage/img/placeYourImageHereMenu2.png">
+                    <h3>ITALIAN SOURCE MUSHROOM</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua.
+                    Quis ipsum suspendisse
+                    </p>
+                    <h4>Price: $12.00</h4>
+                </div>
+            </div>
+       </section>
     </main>
+    <footer id="cont">
+        <section class="orange">
+            <img src="storage/img/placeYourImageHere5.png">
+            <div class="fnl-txt">
+                <h1>Enjoy Beast Meal</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidunt ut labore et dolore magna</p>
+            </div>
+        </section>
+        <section class="social-media">
+            <img src="storage/img/logo2.png">
+            <nav>
+                <a href="#home">HOME</a>
+                <a href="#abo">ABOUT US</a>
+                <a href="">SERVICES</a>
+                <a href="#men">FOODS</a>
+                <a href="#cont">CONTACT</a>
+                <a href="">LOCATION</a>
+            </nav>
+            <div class="social">
+                <box-icon name='facebook-circle' type='logo' ></box-icon>
+                <box-icon name='twitter' type='logo' ></box-icon>
+                <box-icon name='instagram' type='logo' ></box-icon>
+                <box-icon name='pinterest' type='logo' ></box-icon>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
