feat: :sparkles: Correccion HTML y finalizacion CSS

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="#">MENUS</a></li>
                 <li><a href="#">OFFERS</a></li>
-            </ul>
-            <div class="logomenu">
-                <img src="storage/img/logo.png" alt="borderLogo">
-            </div>
-            <ul>
+                <li>
+                    <div class="logomenu">
+                        <img src="storage/img/logo.png" alt="borderLogo">
+                    </div>
+                </li>
                 <li><a href="#">GALLERY</a></li>
                 <li><a href="#">CONTACT</a></li>
                 <li><a href="#">BLOG</a></li>
@@ -134,16 +134,16 @@
             <nav>
                 <a href="#home">HOME</a>
                 <a href="#abo">ABOUT US</a>
-                <a href="">SERVICES</a>
+                <a href="#">SERVICES</a>
                 <a href="#men">FOODS</a>
                 <a href="#cont">CONTACT</a>
                 <a href="">LOCATION</a>
             </nav>
             <div class="social">
-                <box-icon name='facebook-circle' type='logo' ></box-icon>
-                <box-icon name='twitter' type='logo' ></box-icon>
-                <box-icon name='instagram' type='logo' ></box-icon>
-                <box-icon name='pinterest' type='logo' ></box-icon>
+                <i class='bx bxl-facebook-circle'></i>
+                <i class='bx bxl-twitter'></i>
+                <i class='bx bxl-instagram'></i>
+                <i class='bx bxl-pinterest'></i>
             </div>
         </section>
     </footer>
